[package]
name = "oauth"
version = "0.6.0"
edition = "2021"
authors = ["Chan Jin Kim <ckswls89@gmail.com>",
            "SOSTeam <https://github.com/S-OSTeam>"]
license = "MIT/Apache-2.0"

homepage = "https://deamhome.synology.me"
repository = "https://github.com/S-OSTeam/Lane-Auth"
documentation = "https://github.com/S-OSTeam/Lane-Auth"

description = """

"""
readme = "README.md"
keywords = ["rust", "web-actix", "auth", "session", "seaORM"]
categories = ["web-programming", "authentication"]

[dependencies]
redis = { version = "0.27.2", features = ["async-std-comp"] }
sea-orm = {version = "1.1.0-rc.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-uuid", "with-bigdecimal", "postgres-array", "mock"]}
uuid = {version =  "1.10.0", features = ["serde", "v4"] }

pg-embed = "0.7.1"

actix-web = "4"
actix-session = "0.10.1"
actix-cors = "0.7.0"
actix-rt = "2.10.0"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
validator = "0.18.1"

serde = {version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

bcrypt = "0.15.1"
dotenvy = "0.15.7"
ammonia = "4.0.0"

chrono = { version = "0.4.38", features = ["serde"] }

anyhow = "1.0.89"
thiserror = "1.0.63"

log = "0.4.22"
log4rs = "1.3.0"
logcall = "0.1.9"
env_logger = "0.11.5"

rand = "0.9.0-alpha.2"
regex = "1.10.6"

[dev-dependencies]
pretty_assertions = "1.4.1"
actix-test = "0.1.5"